--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
             <div class="footer-box">
                 <div class="footer-logo-box">
                     <a class="footer-logo link" href="./index.html">Web<span class="second-accent">Studio</span></a>
@@ -363,6 +363,21 @@
                     </ul>
                 </div>
             </div>
+            <div>
+                <p class="subscribe-form-title">Subscribe</p>
+                <form name="subscribe-form">
+                    <div class="subscribe-form-wrap">
+                        <label>
+                            <input class="subscribe-form-input" type="email" placeholder="E-mail" required>
+                        </label>
+                        <button class="subscribe-form-btn" type="submit">Subscribe
+                            <svg width="24" height="24" class="subscribe-form-svg">
+                                <use href="./images/paper-plane.svg#icon-Frame-3"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -372,6 +387,54 @@
                     <use href="./images/closebtn.svg#icon-closebtn"></use>
                 </svg>
             </button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form" name="contact-form">
+                <label>
+                    <span class="modal-label-text">Name</span>
+                    <div class="modal-wrap">
+                        <input class="modal-input" type="text" name="username" minlength="2" autofocus required />
+                        <svg width="18" height="18" class="modal-icon">
+                            <use href="./images/form.svg#icon-person"></use>
+                        </svg>
+                    </div>
+                </label>
+                <label>
+                    <span class="modal-label-text">Phone</span>
+                    <div class="modal-wrap">
+                        <input class="modal-input" type="tel" name="userphone" required />
+                        <svg width="18" height="18" class="modal-icon">
+                            <use href="./images/form.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                </label>
+                <label>
+                    <span class="modal-label-text">Email</span>
+                    <div class="modal-wrap">
+                        <input class="modal-input" type="email" name="user-email" required />
+                        <svg width="18" height="18" class="modal-icon">
+                            <use href="./images/form.svg#icon-email"></use>
+                        </svg>
+                    </div>
+                </label>
+                <label>
+                    <span class="modal-label-text">Comment</span>
+                    <textarea class="textarea-commment" name="comment" rows="10" placeholder="Text input"></textarea>
+                </label>
+                <label class="modal-checkbox-input">
+
+                    <input class="modal-input-checkbox visually-hidden" type="checkbox" name="terms" value="true"
+                        required>
+                    <span class="checkbox-span">
+                        <svg width="10" height="8">
+                            <use href="./images/vector.svg#icon-Vector"></use>
+                        </svg>
+                    </span>
+                    <span class="modal-label-text">I accept the terms and conditions of the <a
+                            class="modal-term-link link" href="">Privacy
+                            Policy</a></span>
+                </label>
+                <button class="modal-button" type="submit">Send</button>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
