--- a/index.html
+++ b/index.html
@@ -320,15 +320,15 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <div class="footer-box">
-                <div class="footer-logo-box">
-                    <a class="footer-logo link" href="./index.html">Web<span class="second-accent">Studio</span></a>
-                    <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital
-                        marketing &
-                        growth solutions.
-                    </p>
-                </div>
 
+            <div class="footer-logo-box">
+                <a class="footer-logo link" href="./index.html">Web<span class="second-accent">Studio</span></a>
+                <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital
+                    marketing &
+                    growth solutions.
+                </p>
+            </div>
+            <div class="wrap">
                 <div class="footer-soc-box">
                     <p class="social-media-paragraph">Social media</p>
                     <ul class="footer-social-media list">
@@ -367,9 +367,9 @@
                 <p class="subscribe-form-title">Subscribe</p>
                 <form name="subscribe-form">
                     <div class="subscribe-form-wrap">
-                        <label>
-                            <input class="subscribe-form-input" type="email" placeholder="E-mail" required>
-                        </label>
+                        <label for="subscribe-email-input"></label>
+                        <div class="email-input-wrap"><input id="subscribe-email-input" class="subscribe-form-input"
+                                type="email" placeholder="E-mail" required></div>
                         <button class="subscribe-form-btn" type="submit">Subscribe
                             <svg width="24" height="24" class="subscribe-form-svg">
                                 <use href="./images/paper-plane.svg#icon-Frame-3"></use>
@@ -389,37 +389,35 @@
             </button>
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form" name="contact-form">
-                <label>
-                    <span class="modal-label-text">Name</span>
-                    <div class="modal-wrap">
-                        <input class="modal-input" type="text" name="username" minlength="2" autofocus required />
-                        <svg width="18" height="18" class="modal-icon">
-                            <use href="./images/form.svg#icon-person"></use>
-                        </svg>
-                    </div>
-                </label>
-                <label>
-                    <span class="modal-label-text">Phone</span>
-                    <div class="modal-wrap">
-                        <input class="modal-input" type="tel" name="userphone" required />
-                        <svg width="18" height="18" class="modal-icon">
-                            <use href="./images/form.svg#icon-phone"></use>
-                        </svg>
-                    </div>
-                </label>
-                <label>
-                    <span class="modal-label-text">Email</span>
-                    <div class="modal-wrap">
-                        <input class="modal-input" type="email" name="user-email" required />
-                        <svg width="18" height="18" class="modal-icon">
-                            <use href="./images/form.svg#icon-email"></use>
-                        </svg>
-                    </div>
-                </label>
-                <label>
-                    <span class="modal-label-text">Comment</span>
-                    <textarea class="textarea-commment" name="comment" rows="10" placeholder="Text input"></textarea>
-                </label>
+                <label for="username-input"><span class="modal-label-text">Name</span></label>
+                <div class="modal-wrap">
+                    <input id="username-input" class="modal-input" type="text" name="username" minlength="2" autofocus
+                        required />
+                    <svg width="18" height="24" class="modal-icon">
+                        <use href="./images/form.svg#icon-person"></use>
+                    </svg>
+                </div>
+
+                <label for="userphone-input"><span class="modal-label-text modal-label-text-margin">Phone</span></label>
+                <div class="modal-wrap">
+                    <input id="userphone-input" class="modal-input" type="tel" name="userphone" required />
+                    <svg width="18" height="24" class="modal-icon">
+                        <use href="./images/form.svg#icon-phone"></use>
+                    </svg>
+                </div>
+
+                <label for="email-input"><span class="modal-label-text modal-label-text-margin">Email</span></label>
+
+                <div class="modal-wrap">
+                    <input id="email-input" class="modal-input" type="email" name="user-email" required />
+                    <svg width="18" height="24" class="modal-icon">
+                        <use href="./images/form.svg#icon-email"></use>
+                    </svg>
+                </div>
+
+                <label for="comment-area"><span class="modal-label-text modal-label-text-margin">Comment</span></label>
+                <textarea id="comment-area" class="textarea-commment" name="comment" rows="10"
+                    placeholder="Text input"></textarea>
                 <label class="modal-checkbox-input">
 
                     <input class="modal-input-checkbox visually-hidden" type="checkbox" name="terms" value="true"
@@ -429,8 +427,8 @@
                             <use href="./images/vector.svg#icon-Vector"></use>
                         </svg>
                     </span>
-                    <span class="modal-label-text">I accept the terms and conditions of the <a
-                            class="modal-term-link link" href="">Privacy
+                    <span class="modal-termins">I accept the terms and conditions of the <a class="modal-term-link link"
+                            href="">Privacy
                             Policy</a></span>
                 </label>
                 <button class="modal-button" type="submit">Send</button>
