--- a/portfolio.html
+++ b/portfolio.html
@@ -205,16 +205,16 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <div class="footer-box">
-                <div class="footer-logo-box">
-                    <a class="footer-logo link" href="./index.html">Web<span class="second-accent">Studio</span></a>
-                    <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital
-                        marketing &
-                        growth solutions.
-                    </p>
-                </div>
+        <div class="container footer-container">
 
+            <div class="footer-logo-box">
+                <a class="footer-logo link" href="./index.html">Web<span class="second-accent">Studio</span></a>
+                <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital
+                    marketing &
+                    growth solutions.
+                </p>
+            </div>
+            <div class="wrap">
                 <div class="footer-soc-box">
                     <p class="social-media-paragraph">Social media</p>
                     <ul class="footer-social-media list">
@@ -248,6 +248,21 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+            <div>
+                <p class="subscribe-form-title">Subscribe</p>
+                <form name="subscribe-form">
+                    <div class="subscribe-form-wrap">
+                        <label for="subscribe-email-input"></label>
+                        <div class="email-input-wrap"><input id="subscribe-email-input" class="subscribe-form-input"
+                                type="email" placeholder="E-mail" required></div>
+                        <button class="subscribe-form-btn" type="submit">Subscribe
+                            <svg width="24" height="24" class="subscribe-form-svg">
+                                <use href="./images/paper-plane.svg#icon-Frame-3"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
     </footer>
